@@ -1,5 +1,9 @@
 Changes for Perl programming language extension Parse-CPAN-Meta
 
+	- Move binary file unpacking to test file from Makefile.PL so tests
+	  will pass in the Perl core using a generated Makefile.PL
+	- Move bundled uupacktool.pl to t/bin/
+
 1.40 Sat 25 Jul 2009
 	- Add core perl 5.10.1's uupacktool.pl
 	- Repackage t/data/utf_16_le_bom.yml as ASCII for https://rt.cpan.org/Ticket/Display.html?id=47844
